I am using an TVS RP 3230 thermal printer for KOT and bills. I need a se

--- a/src/app/print.css
+++ b/src/app/print.css
@@ -15,7 +15,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 100%;
+    width: var(--print-width, 100%);
   }
 
   .non-printable {
